hard-gists/bb85da3aa563b747151e/run.log
=== Docker Run Log for bb85da3aa563b747151e ===
Started at: Mi 29. Okt 19:37:53 CET 2025

[2025-10-29 19:37:54] START: Running container for bb85da3aa563b747151e
[2025-10-29 19:37:54] SUCCESS: Container a264a246044acb32b13dcfbf4f5fecd3ecee7180d4f9f33630e8d55562e97752 started for bb85da3aa563b747151e
=== Container logs for bb85da3aa563b747151e ===
  File "/snippet.py", line 29
    print str(e)
    ^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for bb85da3aa563b747151e ===
[2025-10-29 19:37:56] INFO: Container a264a246044acb32b13dcfbf4f5fecd3ecee7180d4f9f33630e8d55562e97752 has stopped
